# evolution-data-server

./: CMakeLists.txt
cmake/modules/: GtkDocConfig.cmake
docs/reference/: CMakeLists.txt  camel-docs.sgml.in  evolution-data-server-docs.sgml.in
src/addressbook/backends/ldap/: e-book-backend-ldap.c
src/addressbook/libebook-contacts/: e-book-query.c
src/addressbook/libedata-book/: e-book-backend-sexp.c  e-book-backend-sqlitedb.c  e-book-backend-summary.c
src/calendar/libedata-cal/: e-cal-backend-sexp.c
src/libedataserver/: CMakeLists.txt  e-sexp.c  e-sexp.h
